Added more methods to the JavaOptions API. Some cleanups.